# openai-test

./: .gitignore  README.md  instruct.py  pyproject.toml
