[tool.poetry]
name = "openai-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "openai_test"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
